art/styles.css
/*
  Author: Lark Mendoza
  CS 132 Spring 2024
  Date: June 2, 2024

  This is the styles.css page for the Art You've (Probably!) Never Seen page.
*/

/* Text */
body {
  font-family: "Lato", sans-serif;
}

h2 {
  font-size: 22pt;
}

h3,
button {
  font-size: 16pt;
}

h4 {
  font-size: 14pt;
}

header p {
  font-size: 13pt;
}

h1,
h2,
h3,
h4,
p {
  color: #333a3f;
}

.unknown,
h2 {
  font-style: italic;
}

/* Header */
#banner {
  padding: 25px;
}

h1 {
  text-align: center;
  padding-top: 20px;
  padding-bottom: 20px;
  margin: 20px;
}

/* General */
#banner,
h1,
aside {
  border-radius: 25px;
}

body,
h1,
button {
  background-color: #fdfdfd;
}

body {
  padding: 5px 50px;
}

main,
#art-display {
  width: 100%;
  margin-top: 15px;
  margin-bottom: 15px;
}

main {
  /* width | style */
  border-bottom: 5px dashed;
}

/* Button */
button {
  border-radius: 5px;
  border-width: 10px;
  border-style: solid;
  padding-left: 10px;
  padding-right: 10px;
  cursor: pointer;
}

#center-button {
  /*
    Yes, fit-content is repeated, but since it's unrelated to the
    #art-display > a style, I will keep it separate in case a better way to
    style either one is found.
  */
  width: fit-content;
  margin: auto;
}

.disabled {
  cursor: wait;
}

/* Art Container */
#art-display {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
}

/* Image + Link */
#art-display > a {
  max-width: 60%;
  /*
    Yes, fit-content is repeated, but since it's unrelated to the #center-button
    style, I will keep it separate in case a better way to style either one is
    found.
  */
  width: fit-content;
}

#art-display img {
  min-width: 300px;
  max-height: 1000px;
  max-width: 100%;
}

/* Aside */
aside {
  width: 35%;
  /* width | style */
  border: 5px dashed;
  padding: 10px;
  margin-left: 10px;
}

aside header {
  margin-bottom: 50px;
}

